[level 3] Title: 단어 변환, Time: 6.38 ms, Memory: 75.6 MB -BaekjoonHub